@@ -6,6 +6,6 @@ use RunTests;
 use Test::More;
 
 #unlink 't/var/dvdzbr.db';
-my $schema = DBSchema::get_test_schema();
+my $schema = DBSchema->get_test_schema();
 run_tests( $schema );
 
